test/bad/nullables/nullable06.px

a = [0]
[Int?] a' = a
